<resources>
    <string name="app_name">Outbrake</string>

    <string name="sign_out">Sign Out</string>
    <string name="settings">Settings</string>
    <string name="feedback">Report a bug</string>

    <string name="thermo_log">Log Temperature</string>
    <string name="thermo_log_submit">Submit</string>

    <string name="travel_declaration">Travel Declaration</string>
    <string name="travel_start">Select start date</string>
    <string name="travel_to">to</string>
    <string name="travel_end">Select end date</string>
    <string name="travel_select_country">Select Country</string>
    <string name="travel_apply">Submit Application</string>
    <string name="travel_hint_date_start">Select Start Date</string>
    <string name="travel_hint_date_end">Select End Date</string>
    <string name="travel_hint_country">Select Country</string>
    <string name="travel_intention">Intention of travel</string>
    <string name="travel_intention_leisure">Leisure</string>
    <string name="travel_intention_medical">Medical</string>
    <string name="travel_intention_business">Business</string>
    <string name="travel_intention_family">Family</string>

    <string name="maps_clusters">Clusters</string>
    <string name="maps_clinics">Clinics</string>
    <string name="maps_add">Add Cluster</string>

    <string name="settings_title">Settings</string>
    <string name="settings_category_startup">STARTUP</string>
    <string name="settings_category_user">USER</string>
    <string name="settings_select_default">Select default tab to launch</string>
    <string name="settings_display_name">Display Name</string>
    <string name="settings_display_name_msg">Enter your new display name</string>
    <string name="settings_notifications">Notifications</string>
    <string name="settings_notifications_summary">Get Daily Reminders from Outbrake</string>
    <string name="title_activity_maps">Map</string>

    <string name="popup_title">Clinic Profile</string>
    <string name="popup_maps_name_clinic">Clinic Name:</string>
    <string name="popup_maps_tele">Telephone Number:</string>
    <string name="popup_maps_address">Address:</string>
    <string name="popup_maps_clinic_type">Clinic Type:</string>

    <string name="cluster_title">Add New Cluster</string>
    <string name="cluster_lat">Latitude</string>
    <string name="cluster_long">Longitude</string>
    <string name="cluster_name">Name of Place</string>
    <string name="cluster_cases">Number of Cases</string>
    <string name="cluster_ok">Ok</string>
    <string name="cluster_delete">Delete</string>

</resources>
