<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/cluster_rl"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorPrimary"
    android:paddingVertical="10dp"
    android:paddingHorizontal="10dp"
    android:orientation="vertical">
    <com.google.android.material.textview.MaterialTextView
        android:id="@+id/cluster_title"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/cluster_title"
        android:textColor="@color/colorSecondary"
        android:textSize="26sp"
        android:fontFamily="sans-serif-smallcaps"
        android:gravity="center_horizontal"
        />
    <com.google.android.material.textfield.TextInputEditText
        android:id="@+id/cluster_name"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/cluster_title"
        android:hint="@string/cluster_name"
        android:layout_marginVertical="5dp"
        android:fontFamily="sans-serif-smallcaps"
        android:textColor="@color/colorSecondary"
        android:textColorHint="@color/colorTranslucent"
        android:textSize="20dp"
        />
    <com.google.android.material.textfield.TextInputEditText
        android:id="@+id/cluster_cases"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/cluster_cases"
        android:layout_marginVertical="5dp"
        android:fontFamily="sans-serif-smallcaps"
        android:textColor="@color/colorSecondary"
        android:textColorHint="@color/colorTranslucent"
        android:textSize="20dp"
        />
    <com.google.android.material.textfield.TextInputEditText
        android:id="@+id/cluster_lat"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/cluster_lat"
        android:layout_marginVertical="5dp"
        android:fontFamily="sans-serif-smallcaps"
        android:textColor="@color/colorSecondary"
        android:textColorHint="@color/colorTranslucent"
        android:textSize="20dp"
        />
    <com.google.android.material.textfield.TextInputEditText
        android:id="@+id/cluster_long"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/cluster_long"
        android:layout_marginVertical="5dp"
        android:fontFamily="sans-serif-smallcaps"
        android:textColor="@color/colorSecondary"
        android:textColorHint="@color/colorTranslucent"
        android:textSize="20dp"
        />
    <com.google.android.material.button.MaterialButton
        android:id="@+id/cluster_ok"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginVertical="5dp"
        android:fontFamily="sans-serif-smallcaps"
        android:textColor="@color/colorPrimary"
        android:textSize="20dp"
        android:text="@string/cluster_ok"
        app:backgroundTint="@color/colorSecondary"
        app:cornerRadius="10dp"
        />
    <com.google.android.material.button.MaterialButton
        android:id="@+id/cluster_delete"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginVertical="5dp"
        android:fontFamily="sans-serif-smallcaps"
        android:textColor="@color/colorPrimary"
        android:textSize="20dp"
        android:text="@string/cluster_delete"
        app:backgroundTint="@color/colorSecondary"
        app:cornerRadius="10dp"
        />

</LinearLayout>