<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/travel_scroll_view"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingHorizontal="10dp"
    android:background="@color/colorPrimary">
    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">
        <TextView
            android:id="@+id/travel_select_start_date"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="75dp"
            android:text="@string/travel_hint_date_start"
            android:textSize="24sp"
            android:layout_centerHorizontal="true"
            android:gravity="center"
            android:textColor="@color/colorSecondary"
            android:fontFamily="sans-serif-smallcaps"
            />
        <TextView
            android:id="@+id/travel_to"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginVertical="10dp"
            android:text="@string/travel_to"
            android:layout_below="@id/travel_select_start_date"
            android:textSize="22sp"
            android:layout_centerHorizontal="true"
            android:textColor="@color/colorSecondary"
            android:fontFamily="sans-serif-smallcaps"
            />
        <TextView
            android:id="@+id/travel_select_end_date"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/travel_hint_date_end"
            android:layout_below="@id/travel_to"
            android:textSize="22sp"
            android:layout_centerHorizontal="true"
            android:textColor="@color/colorSecondary"
            android:fontFamily="sans-serif-smallcaps"
            />
        <TextView
            android:id="@+id/travel_select_country"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/travel_hint_country"
            android:layout_below="@id/travel_select_end_date"
            android:layout_marginTop="30dp"
            android:textSize="18sp"
            android:layout_centerHorizontal="true"
            android:gravity="center"
            android:textColor="@color/colorSecondary"
            android:fontFamily="sans-serif-smallcaps"
            />
        <View
            android:id="@+id/travel_line"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:layout_centerHorizontal="true"
            android:layout_below="@id/travel_select_country"
            android:textColor="@color/colorAccent"
            android:textSize="18sp"
            />

        <TextView
            android:id="@+id/travel_intention"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginVertical="15dp"
            android:text="@string/travel_intention"
            android:textSize="24sp"
            android:layout_below="@id/travel_line"
            android:textColor="@color/colorSecondary"
            android:layout_centerHorizontal="true"
            android:fontFamily="sans-serif-smallcaps"
            />

        <RadioGroup
            android:id="@+id/travel_purpose"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerHorizontal="true"
            android:layout_below="@id/travel_intention"
            >
            <RadioButton
                android:id="@+id/travel_leisure"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/travel_intention_leisure"
                android:checked="true"
                android:buttonTint="@color/colorSecondary"
                android:textColor="@color/colorSecondary"
                android:fontFamily="sans-serif-smallcaps"
                />
            <RadioButton
                android:id="@+id/travel_family"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/travel_intention_family"
                android:buttonTint="@color/colorSecondary"
                android:textColor="@color/colorSecondary"
                android:fontFamily="sans-serif-smallcaps"
                />
            <RadioButton
                android:id="@+id/travel_business"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/travel_intention_business"
                android:buttonTint="@color/colorSecondary"
                android:textColor="@color/colorSecondary"
                android:fontFamily="sans-serif-smallcaps"
                />
            <RadioButton
                android:id="@+id/travel_medical"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/travel_intention_medical"
                android:buttonTint="@color/colorSecondary"
                android:textColor="@color/colorSecondary"
                android:fontFamily="sans-serif-smallcaps"
                />
        </RadioGroup>
        <com.google.android.material.button.MaterialButton
            style="@style/Widget.MaterialComponents.FloatingActionButton"
            app:icon="@drawable/ic_airplanemode_active_white_24dp"
            android:id="@+id/travel_submit_application"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerHorizontal="true"
            android:layout_below="@id/travel_purpose"
            android:layout_marginTop="15dp"
            android:textSize="20sp"
            android:text="@string/travel_apply"
            android:textColor="@color/colorPrimary"
            app:iconTint="@color/colorPrimary"
            app:backgroundTint="@color/colorSecondary"
            android:fontFamily="sans-serif-smallcaps"
            />

    </RelativeLayout>
</ScrollView>