<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/maps_ll"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorPrimary"
    android:orientation="vertical">
    <RadioGroup
        android:id="@+id/maps_rg"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:orientation="horizontal"
        android:gravity="center_horizontal"
        >
        <com.google.android.material.radiobutton.MaterialRadioButton
            android:id="@+id/maps_rb_cluster"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:paddingHorizontal="10dp"
            android:text="@string/maps_clusters"
            android:fontFamily="sans-serif-smallcaps"
            android:textColor="@color/colorSecondary"
            android:buttonTint="@color/colorSecondary"
            android:textSize="24sp"
            />
        <com.google.android.material.radiobutton.MaterialRadioButton
            android:id="@+id/maps_rb_clinics"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:paddingHorizontal="10dp"
            android:text="@string/maps_clinics"
            android:fontFamily="sans-serif-smallcaps"
            android:textColor="@color/colorSecondary"
            android:buttonTint="@color/colorSecondary"
            android:textSize="24sp"
            />

    </RadioGroup>
    <com.google.android.gms.maps.MapView
        android:id="@+id/mapView"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_weight="15"/>
    <com.google.android.material.button.MaterialButton
        android:id="@+id/maps_add_cluster"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        app:icon="@drawable/ic_add_black_24dp"
        android:text="@string/maps_add"
        android:textSize="24sp"
        android:layout_gravity="center_horizontal"
        android:fontFamily="sans-serif-smallcaps"
        />
</LinearLayout>