<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/popup_maps_sv"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorPrimary"
    android:orientation="vertical"
    android:paddingHorizontal="10dp"
    tools:context=".Popup"
    android:scrollbars="vertical">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        >
        <TextView
        android:id="@+id/title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/popup_title"
        android:textColor="@color/colorSecondary"
        android:layout_marginTop="10dp"
        android:textSize="32sp"
        android:fontFamily="sans-serif-smallcaps"
        android:textStyle="bold"
        android:layout_gravity="center_horizontal"
        />
        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:layout_marginTop="10dp"
            android:layout_marginHorizontal="60dp"
            android:background="@color/colorSecondary"
            />
        <TextView
            android:id="@+id/popup_name"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/popup_maps_name_clinic"
            android:textColor="@color/colorSecondary"
            android:layout_marginTop="50dp"
            android:textSize="28sp"
            android:fontFamily="sans-serif-smallcaps"
            android:layout_gravity="center_horizontal"
            android:gravity="center_horizontal"
            />
        <TextView
            android:id="@+id/popup_name_tbe"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="@color/colorSecondary"
            android:layout_marginVertical="10dp"
            android:textSize="28sp"
            android:layout_marginHorizontal="10dp"
            android:textStyle="italic"
            android:fontFamily="sans-serif-smallcaps"
            android:layout_gravity="center_horizontal"
            android:gravity="center_horizontal"
            />
        <TextView
            android:id="@+id/popup_address"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="@color/colorSecondary"
            android:layout_marginTop="10dp"
            android:textSize="28sp"
            android:fontFamily="sans-serif-smallcaps"
            android:text="@string/popup_maps_address"
            android:layout_gravity="center_horizontal"
            android:gravity="center_horizontal"
            />
        <TextView
            android:id="@+id/popup_address_tbe"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="@color/colorSecondary"
            android:layout_marginTop="10dp"
            android:textSize="28sp"
            android:layout_marginHorizontal="10dp"
            android:textStyle="italic"
            android:fontFamily="sans-serif-smallcaps"
            android:layout_gravity="center_horizontal"
            android:gravity="center_horizontal"
            />
        <TextView
            android:id="@+id/popup_telephone"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="@color/colorSecondary"
            android:layout_marginTop="10dp"
            android:textSize="28sp"
            android:fontFamily="sans-serif-smallcaps"
            android:text="@string/popup_maps_tele"
            android:layout_gravity="center_horizontal"
            android:gravity="center_horizontal"
            />
        <TextView
            android:id="@+id/popup_tele_tbe"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="@color/colorSecondary"
            android:layout_marginTop="10dp"
            android:textSize="28sp"
            android:layout_marginHorizontal="10dp"
            android:textStyle="italic"
            android:fontFamily="sans-serif-smallcaps"
            android:layout_gravity="center_horizontal"
            android:gravity="center_horizontal"
            />
        <TextView
            android:id="@+id/popup_type"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="@color/colorSecondary"
            android:layout_marginTop="10dp"
            android:textSize="28sp"
            android:fontFamily="sans-serif-smallcaps"
            android:text="@string/popup_maps_clinic_type"
            android:layout_gravity="center_horizontal"
            android:gravity="center_horizontal"
            />
        <TextView
            android:id="@+id/popup_type_tbe"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="@color/colorSecondary"
            android:layout_marginTop="10dp"
            android:textSize="28sp"
            android:layout_marginHorizontal="10dp"
            android:textStyle="italic"
            android:fontFamily="sans-serif-smallcaps"
            android:layout_gravity="center_horizontal"
            android:gravity="center_horizontal"
            /></LinearLayout>
</ScrollView>